# Cricket-Ready-Ball-Classifier

./: .gitignore  404.html  README.md  index.html  predict.py  requirements.txt  service-worker.js  service-worker.js.map  train.py
.github/workflows/: deploy-frontend.yml  deploy.yml
NN-Models/: predict.py  train.py
backend/: .gitignore  Cargo.toml  install-cricket-ready-backend.sh  uninstall-cricket-ready-backend.sh
backend/nn-classifier/: predict.py
backend/src/: main.rs
backend/training_data/: training_log.jsonl
css/: app.0fda9169.css  app.12df486b.css  app.2647d2d3.css  app.3e68466f.css  app.6aad3c53.css  app.7e0ec263.css  app.813ed1fe.css  app.d492ea90.css  app.fb226a5f.css
docs/: Back-End.Training Route.md  Back-End.md  Back-End.nn-classifier.md  Front-End.Development Phases.md  Front-End.Training Tool.md  Front-End.md  root.md
docs/notes/: Back-End.md  Front-End.Development Phases.md  Front-End.md  architecture.md  root.md
frontend/: .gitignore  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: CameraComponent.vue  LoadingAnimation.vue
frontend/src/router/: index.ts
frontend/src/views/: PredictView.vue  TrainingView.vue
js/: app.0042f34d.js  app.0042f34d.js.map  app.016b7b32.js  app.06ab79f0.js  app.0b3ee028.js  app.4ed159fe.js  app.992dd07b.js  app.a2a6a500.js  app.b04dcea3.js  app.d9cf6eba.js  app.ddcae822.js  chunk-vendors.1d510462.js  chunk-vendors.1d510462.js.map  chunk-vendors.fc0c179c.js  vendors.7b04089d.js  vendors.f4828299.js
