[package]
name = "Cricket-Ready-Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-api = "0.2.1"
actix-web = "4.9"
actix-multipart = "0.6"
futures-util = "0.3"
bytes = "1.0"
chrono = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
time = "0.3"
simplelog = "0.12"